--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="./css/modal-review.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
