--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
     <!-- ------------------------------ modal-review -------------------------------- -->
 
-    <div class="backdrop-review">
-        <div class="modal-review">
+    <!-- На кнопку відкриття 'data-modal-open'-->
 
-            <button class="btn-modal-review-close" type="button">
+    <div class="backdrop-review is-hidden" data-modal>
+        <div class="modal-review">
+            <button class="btn-modal-review-close" data-modal-close type="button">
                 <svg class="btn-modal-review-close-icon" width="12" height="12">
-                    <use href="./images/icons.svg#i-close-button"></use>
+                    <use href="../img/icons.svg#i-close-button"></use>
                 </svg>
             </button>
 
@@ -52,7 +53,7 @@
                         name="phone" pattern="[(0-9)]{9}" required maxlength="9">
                     <span class="modal-review-icon-position">
                         <svg class="modal-review-tel-icon" width="24" height="18">
-                            <use href="./images/icons.svg#i-flag"></use>
+                            <use href="../img/icons.svg#i-flag"></use>
                         </svg>
                         +380
                     </span>
@@ -68,7 +69,3 @@
             </form>
         </div>
     </div>
-
-</body>
-
-</html>
