--- a/index.html
+++ b/index.html
@@ -19,13 +19,73 @@
 <body>
 
     <main>
+        <!-- ------------------------------ Uniq-comp -------------------------------- -->
+        <!-- <load src="/uniqe-comp.html" /> -->
+
+        <section class="uniq-section section">
+            <div class="uniq-container container">
+
+                <h2 class="uniq-title">IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION</h2>
+
+                <p class="uniq-text">At Simply Chocolate, we believe that the secret to exceptional chocolate is in the
+                    details. From the
+                    sourcing of the
+                    finest ingredients to the careful crafting of each individual piece, every step of our process adds
+                    up to one
+                    exceptional taste sensation.</p>
+
+                <ul class="uniq-card-list list">
+                    <li class="uniq-card-item">
+                        <a href="" class="uniq-card-link link">
+
+                            <div class="uniq-card">
+                                <picture class="uniq-img">
+                                    <source
+                                        srcset="./images/milk-chocolate-bar-1x-min.png 1x, ./images/milk-chocolate-bar-2x-min.png 2x"
+                                        media="(min-width: 320px)" width="224" />
+                                    <source
+                                        srcset="./images/milk-chocolate-bar-desktop-1x-min.png 1x, ./images/milk-chocolate-bar-desktop-2x-min.png 2x"
+                                        media="(min-width: 1200px)" width="206" />
+                                    <img src="./images/milk-chocolate-bar-1x-min.png" alt="milk-chocolate-bar"
+                                        width="224" height="171" />
+                                </picture>
+                                <p class="uniq-subtitle">mILK CHOCOLATE</p>
+                            </div>
+
+                            <div class="uniq-card-content">
+
+                                <h3 class="ucc-title">Milk chocolate</h3>
+
+                                <div class="ucc-btn-wrap">
+                                    <button class="ucc-btn-one" type="button">chocolate</button>
+                                    <button class="ucc-btn-two" type="button">the benefits</button>
+                                </div>
+
+                                <p class="ucc-text">Milk chocolate is a solid chocolate confectionery containing cocoa,
+                                    sugar and milk. It is the most consumed type of chocolate. Chocolate was originally
+                                    sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all
+                                    milk chocolate is sold in the United States and Europe, increasingly
+                                    large<span>...</span> amounts are consumed in China and Latin America.
+                                </p>
+
+                            </div>
+
+                        </a>
+                    </li>
+                </ul>
+
+
+
+            </div>
+        </section>
+
     </main>
 
     <!-- ------------------------------ modal-review -------------------------------- -->
 
     <!-- На кнопку відкриття 'data-modal-open'-->
 
-    <div class="backdrop-review is-hidden" data-modal>
+    <!-- <div class="backdrop-review is-hidden" data-modal>
         <div class="modal-review">
             <button class="btn-modal-review-close" data-modal-close type="button">
                 <svg class="btn-modal-review-close-icon" width="12" height="12">
@@ -68,4 +128,6 @@
 
             </form>
         </div>
-    </div>
+    </div> -->
+
+</body>
