--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                                 <picture class="uniq-img">
                                     <source
                                         srcset="./images/milk-chocolate-bar-1x-min.png 1x, ./images/milk-chocolate-bar-2x-min.png 2x"
-                                        media="(min-width: 320px)" width="224" />
+                                        media="(min-width: 320px)" width="224" height="171" />
                                     <source
                                         srcset="./images/milk-chocolate-bar-desktop-1x-min.png 1x, ./images/milk-chocolate-bar-desktop-2x-min.png 2x"
-                                        media="(min-width: 1200px)" width="206" />
+                                        media="(min-width: 1200px)" width="206" height="160" />
                                     <img src="./images/milk-chocolate-bar-1x-min.png" alt="milk-chocolate-bar"
                                         width="224" height="171" />
                                 </picture>
@@ -53,7 +53,6 @@
                             </div>
 
                             <div class="uniq-card-content">
-
                                 <h3 class="ucc-title">Milk chocolate</h3>
 
                                 <div class="ucc-btn-wrap">
@@ -67,11 +66,121 @@
                                     milk chocolate is sold in the United States and Europe, increasingly
                                     large<span>...</span> amounts are consumed in China and Latin America.
                                 </p>
-
                             </div>
-
                         </a>
                     </li>
+
+                    <li class="uniq-card-item">
+                        <a href="" class="uniq-card-link link">
+
+                            <div class="uniq-card">
+                                <picture class="uniq-img">
+                                    <source
+                                        srcset="./images/milk-mobile-1x-min.png 1x, ./images/milk-mobile-2x-min.png 2x"
+                                        media="(min-width: 320px)" width="224" height="171" />
+                                    <source
+                                        srcset="./images/milk-desktop-1x-min.png 1x, ./images/milk-desktop-2x-min.png 2x"
+                                        media="(min-width: 1200px)" width="206" height="160" />
+                                    <img src="./images/milk-desktop-1x-min.png" alt="milk" width="224" height="171" />
+                                </picture>
+                                <p class="uniq-subtitle">mILK</p>
+                            </div>
+
+                            <div class="uniq-card-content">
+                                <h3 class="ucc-title">Milk</h3>
+
+                                <div class="ucc-btn-wrap">
+                                    <button class="ucc-btn-one" type="button">milk</button>
+                                    <button class="ucc-btn-two" type="button">the benefits</button>
+                                </div>
+
+                                <p class="ucc-text">Milk is a white liquid food produced by the mammary glands of
+                                    mammals. It is the primary source of nutrition for young
+                                    mammals (including breastfed human infants) before they are able to digest solid
+                                    food.Early-lactation milk, which is called colostrum, contains antibodies that
+                                    strengthen the immune
+                                    system,<span>...</span> and thus reduces the risk of many diseases. Milk contains
+                                    many nutrients, including protein and lactose.
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="uniq-card-item">
+                        <a href="" class="uniq-card-link link">
+
+                            <div class="uniq-card">
+                                <picture class="uniq-img">
+                                    <source
+                                        srcset="./images/nuts-mobile-1x-min.png 1x, ./images/nuts-mobile-2x-min.png 2x"
+                                        media="(min-width: 320px)" width="224" height="171" />
+                                    <source
+                                        srcset="./images/nuts-desktop-1x-min.png 1x, ./images/nuts-desktop-2x-min.png 2x"
+                                        media="(min-width: 1200px)" width="206" height="160" />
+                                    <img src="./images/nuts-mobile-1x-min.png" alt="nuts" width="224" height="171" />
+                                </picture>
+                                <p class="uniq-subtitle">nuts</p>
+                            </div>
+
+                            <div class="uniq-card-content">
+                                <h3 class="ucc-title">nuts</h3>
+
+                                <div class="ucc-btn-wrap">
+                                    <button class="ucc-btn-one" type="button">nuts</button>
+                                    <button class="ucc-btn-two" type="button">the benefits</button>
+                                </div>
+
+                                <p class="ucc-text">Almonds, pistachios, and walnuts are some types of nuts that contain
+                                    healthy nutrients. When eaten as part of a
+                                    nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of
+                                    heart disease. They're a good source
+                                    of fiber, healthy fats, and plant protein. Plus, they're great on their own, paired
+                                    with<span>...</span> fruit, or added to dishes like
+                                    salads, desserts, and grains.
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="uniq-card-item">
+                        <a href="" class="uniq-card-link link">
+
+                            <div class="uniq-card">
+                                <picture class="uniq-img">
+                                    <source
+                                        srcset="./images/semi-sweet-mobile-1x-min.png 1x, ./images/semi-sweet-mobile-2x-min.png 2x"
+                                        media="(min-width: 320px)" width="224" height="171" />
+                                    <source
+                                        srcset="./images/semi-sweet-desktop-1x-min.png 1x, ./images/semi-sweet-desktop-2x-min.png 2x"
+                                        media="(min-width: 1200px)" width="206" height="160" />
+                                    <img src="./images/semi-sweet-mobile-1x-min.png" alt="semi-sweet-chocolate"
+                                        width="224" height="171" />
+                                </picture>
+                                <p class="uniq-subtitle">sEMI - SWEET CHOCOLATE</p>
+                            </div>
+
+                            <div class="uniq-card-content">
+                                <h3 class="ucc-title">sEMI - SWEET CHOCOLATE</h3>
+
+                                <div class="ucc-btn-wrap">
+                                    <button class="ucc-btn-one" type="button">sweet chocolate</button>
+                                    <button class="ucc-btn-two" type="button">the benefits</button>
+                                </div>
+
+                                <p class="ucc-text">Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of
+                                    the best ways to gain an understanding of this type
+                                    of chocolate is to compare it to a different type of chocolate. Semisweet is darker
+                                    than milk chocolate. In a taste
+                                    comparison, it has a slightly bitter taste whereas milk chocolate is sweeter
+                                    and<span>...</span>
+                                    more mellow. This delectable flavor of
+                                    chocolate is very versatile.
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+
+
                 </ul>
 
 
