--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
                                 <p class="ucc-text">Milk chocolate is a solid chocolate confectionery containing cocoa,
                                     sugar and milk. It is the most consumed type of chocolate. Chocolate was originally
-                                    sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all
+                                    sold and consumed as a beverage in pre-Columbian times.<span
+                                        class="ucc-three-dots">...</span> Although four-fifths of all
                                     milk chocolate is sold in the United States and Europe, increasingly
                                     large<span>...</span> amounts are consumed in China and Latin America.
                                 </p>
@@ -97,7 +98,8 @@
                                 <p class="ucc-text">Milk is a white liquid food produced by the mammary glands of
                                     mammals. It is the primary source of nutrition for young
                                     mammals (including breastfed human infants) before they are able to digest solid
-                                    food.Early-lactation milk, which is called colostrum, contains antibodies that
+                                    food.Early-lactation milk,<span class="ucc-three-dots">...</span> which is called
+                                    colostrum, contains antibodies that
                                     strengthen the immune
                                     system,<span>...</span> and thus reduces the risk of many diseases. Milk contains
                                     many nutrients, including protein and lactose.
@@ -133,7 +135,7 @@
                                 <p class="ucc-text">Almonds, pistachios, and walnuts are some types of nuts that contain
                                     healthy nutrients. When eaten as part of a
                                     nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of
-                                    heart disease. They're a good source
+                                    heart disease. They're a good source<span class="ucc-three-dots">...</span>
                                     of fiber, healthy fats, and plant protein. Plus, they're great on their own, paired
                                     with<span>...</span> fruit, or added to dishes like
                                     salads, desserts, and grains.
