--- a/index.html
+++ b/index.html
@@ -19,6 +19,73 @@
 <body>
 
     <main>
+        <!-- --------------- Review section --------------------- -->
+
+        <section class="review-section section">
+            <div class="review-container container">
+                <h2 class="review-title"> chocolate <span>is loved</span></h2>
+
+                <ul class="review-list list">
+
+                    <li class="review-item">
+                        <div class="review-content">
+                            <img class="review-foto"
+                                srcset="./images/review-section/Ellipse4@1x.png 1x, ./images/review-section/Ellipse4@2x.png 2x"
+                                src="./images/review-section/Ellipse4@1x.png" alt="Viktoria Dobranska" width="80" />
+
+                            <h3 class="review-subtitle">Viktoria Dobranska</h3>
+
+                            <p class="review-text">I love this chocolate bar. Perfect combination of light crispy wafer,
+                                covered in a thin layer chocolate.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="review-item">
+                        <div class="review-content">
+                            <img class="review-foto"
+                                srcset="./images/review-section/Ellipse5@1x.png 1x, ./images/review-section/Ellipse5@2x.png 2x"
+                                src="./images/review-section/Ellipse5@1x.png" alt="Nazar Babenko" width="80" />
+
+                            <h3 class="review-subtitle">Nazar Babenko</h3>
+
+                            <p class="review-text">This chocolate confection is a delight! A delight! The wafer is light
+                                and crisp, the hazelnut cream is smooth, and the
+                                chocolate is good.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="review-item">
+                        <div class="review-content">
+                            <img class="review-foto"
+                                srcset="./images/review-section/Ellipse6@1x.png 1x, ./images/review-section/Ellipse6@2x.png 2x"
+                                src="./images/review-section/Ellipse6@1x.png" alt="Olena Kampusch" width="80" />
+
+                            <h3 class="review-subtitle">Olena Kampusch</h3>
+
+                            <p class="review-text">Chocolate is a family favourite treat. Love the delicious smooth
+                                chocolate and the creaminess inside. The wafer is soft
+                                but crunchy.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul class="review-dots list">
+                    <li class="review-dots-item"></li>
+                    <li class="review-dots-item"></li>
+                    <li class="review-dots-item"></li>
+                    <li class="review-dots-item"></li>
+                </ul>
+
+                <button class="review-btn" type="button" data-modal-open>Leave a review</button>
+
+            </div>
+        </section>
+
+
+
         <!-- ------------------------------ Uniq-comp -------------------------------- -->
         <!-- <load src="/uniqe-comp.html" /> -->
 
@@ -195,8 +262,8 @@
     <!-- ------------------------------ modal-review -------------------------------- -->
 
     <!-- На кнопку відкриття 'data-modal-open'-->
-
-    <!-- <div class="backdrop-review is-hidden" data-modal>
+    <!-- <div class="backdrop-review is-hidden" data-modal></div> -->
+    <div class="backdrop-review is-hidden" data-modal>
         <div class="modal-review">
             <button class="btn-modal-review-close" data-modal-close type="button">
                 <svg class="btn-modal-review-close-icon" width="12" height="12">
@@ -224,7 +291,7 @@
                         name="phone" pattern="[(0-9)]{9}" required maxlength="9">
                     <span class="modal-review-icon-position">
                         <svg class="modal-review-tel-icon" width="24" height="18">
-                            <use href="../img/icons.svg#i-flag"></use>
+                            <use href="../images/icons.svg#i-flag"></use>
                         </svg>
                         +380
                     </span>
@@ -239,6 +306,6 @@
 
             </form>
         </div>
-    </div> -->
+    </div>
 
 </body>
